# ail-lang

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ail/: __init__.py  builder.py  cli.py  core.py  crypto.py  errors.py  network.py  parser.py  schema.py  vocab.py
ail-lang-js/: index.js  package.json  test.js
examples/: quickstart.py
jrvc_blockchain/: Dockerfile  agent_registry.py  deploy.sh  node_server.py  requirements.txt
tests/: __init__.py  test_builder.py  test_core.py  test_vocab.py
